feat: add README

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-L1_RPC_URL=
-L2_RPC_URL=
+L1_SCROLL_RPC_URL=
+L2_SCROLL_RPC_URL=
+L1_SCROLL_SEPOLIA_RPC_URL=
+L2_SCROLL_SEPOLIA_RPC_URL=
 BLOCK_SYNC_STEP=
 MAX_CONCURRENT_CALL=
